--- a/pom.xml
+++ b/pom.xml
@@ -96,14 +96,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://13.212.71.229:9980/mithuntechnologies/repository/canarabank-snapshot/</url>
+	      <name>Sharvil Tech Technologies Releases Nexus Repository</name>
+	      <url>http://34.100.250.253:8081/repository/demo-web-maven-snapshot/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://13.212.71.229:9980/mithuntechnologies/repository/canarabank-release/</url>
+	      <name>Sharvil Technologies Snapshot Nexus Repository </name>
+	      <url>http://34.100.250.253:8081/repository/demo-web-maven/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
