--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,12 @@
 					</webApp>
 				</configuration>
 			</plugin>
-
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>3.3.1</version>
+</plugin>
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-eclipse-plugin</artifactId>
